Compiler/tests/bad/Loops/02_loops.rs
// while context

fn main(){
    let mut x : i32 = 0;
    
    while x < 2 {
        let mut y : i32 = 0;
        println!(3);
    }

    println!(y);
=
    return;
}